# solenwallet

./: .gitignore  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/components/: AccountDetails.tsx  CreateAccountModal.tsx  FaucetCard.tsx  GovernanceCard.tsx  Header.tsx  SendForm.tsx  StakingCard.tsx  TokenCard.tsx  TransactionHistory.tsx  VestingCard.tsx
src/lib/: context.tsx  crypto.ts  faucet.ts  http.ts  networks.ts  open.ts  rpc.ts  wallet.ts
