[package]
name = "solenwallet"
version = "0.1.3"
edition = "2021"

[lib]
name = "solenwallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "solenwallet"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
